--- a/lw5/5_2.html
+++ b/lw5/5_2.html
@@ -11,17 +11,17 @@
     <!--верхний блок-->
     <div class="menu">
       <div class="div_menu">
-        <div>
-          <!--картинка-->
-          <p> Обо мне </p>
+        <div class="menu_item" >
+          <img class="icon" src="images/about_me.png" alt=""/>
+          <p class="p_for_menu"> Обо мне </p>
            </div>
-        <div>
-          <!--картинка-->
-          <p> Моё хобби </p>
+        <div class="menu_item">
+          <img class="icon" src="images/hobby.png" alt="">
+          <p class="p_for_menu"> Моё хобби </p>
         </div>
-        <div>
-          <!--картинка-->
-          <p> Любимые фильмы </p>
+        <div class="menu_item">
+          <img class="icon" src="images/film.png" alt="">
+          <p class="p_for_menu"> Любимые фильмы </p>
         </div>
       </div>
     </div>
@@ -29,7 +29,10 @@
     <div class="div_photo_and_quote">
       <img class="photo" src="images/web.jpg" alt="Хмм" />
       <!--какая-то цитата-->
-      <p class="p_for_quote">Меня трудно найти, легко потерять и невозможно забыть...</p> 
+      <div class="div">
+        <p class="p_for_quote">Меня трудно найти, легко потерять и невозможно забыть...</p> 
+        <p class="p_for_autor">— Комар</p>
+      </div>
     </div> 
 
     <div class="information">
@@ -94,6 +97,10 @@
           <!--оприсание-->
         </div>
       </div>
+    <input type="button" value="Все фильмы" class="button">
     </div>
+    <footer>
+      © 2006-2018 Поволжский государственный технологический университет, ФГБОУ ВО «‎ПГТУ»
+    </footer>
   </body>
 </html>
