--- a/lw7/7_1.html
+++ b/lw7/7_1.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html leng="ru">
   <head>
+    <meta charset=utf-8>
     <script src="js/isPrimeNumber_1.js"></script>
-    <script src="js/calc.js"></script>
+    <script src="js/calc_1.js"></script>
   </head>
+  <body>
+  </body>
 </html>
