--- a/lw13/13_1.html
+++ b/lw13/13_1.html
@@ -94,6 +94,8 @@
       <path stroke="#000000" stroke-width="3" d="M 227 163 L 257 177" />
       
       <path d="M 202 310 L 202 380" stroke="#000000" stroke-width="2" />
+      <path fill="none" stroke="#000000" stroke-width="2" d="M 153 323 L 168 340 L 182 323 L 183 355 L 153 356 L 153 323 L 182 322" />
+      <path fill="none" stroke="#000000" stroke-width="2" d="M 219 322 L 232 336 L 246 322 L 247 353 L 219 354 L 219 322 L 246 321" />
 
 
 
