--- a/lw13/13.html
+++ b/lw13/13.html
@@ -2,12 +2,12 @@
 <html leng="ru">
   <head>
     <meta charset=utf-8 />
-    <script src="js/drawPersons34.js"></script>
+    <script src="js/drawCartmanlandAndKenny.js"></script>
   </head>
   <body>
-    <img src="svg/drawPersons1.svg" alt="person1" />
-    <img src="svg/drawPersons2.svg" alt="person2" />
-    <canvas id="person3" width="400px" height="500px"></canvas>
-    <canvas id="person4" width="400px" height="500px"></canvas>
+    <img src="svg/drawStan.svg" alt="person1" />
+    <img src="svg/drawKyle.svg" alt="person2" />
+    <canvas id="Cartmanland" width="400px" height="500px"></canvas>
+    <canvas id="Kenny" width="400px" height="500px"></canvas>
   </body>
 </html>
