--- a/lw8/8.html
+++ b/lw8/8.html
@@ -80,7 +80,7 @@
       <div class="likely_film">
         <h2 class="h2">Любимые фильмы</h2>
         <div class="films">
-          <input id="left" type="button" onclick="onLeft()" />
+          <input id="left" type="button" value=" " onclick="onLeft()" />
 
 
           <div id="film_1" class="visible_film_1">
@@ -163,7 +163,7 @@
             </p>
           </div>
           
-          <input id="right" type="button" src="images/right.png" onclick="onRight()" />
+          <input id="right" type="button" value=" " onclick="onRight()" />
         </div>
       <input type= "button" value= "Все фильмы" class="button" />
       </div>
